#53 add : S3 설정 및 참조 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,10 @@ redis.port=6379
 
 jwt.secret=${JWT_SECRET_KEY}
 
+# AWS S3
+aws.s3.bucket = ${S3_BUCKET_NAME}
+aws.s3.stack.auto = ${S3_STACK_AUTO}
+aws.s3.region.static = ${S3_REGION}
+aws.s3.credentials.accessKey = ${S3_ACCESSKEY}
+aws.s3.credentials.secretKey = ${S3_SECRETKEY}
+
