#53 add : Member엔티티 filename imageURL 필드 분리 및 파일 크기 제한

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,7 @@ aws.s3.region.static = ${S3_REGION}
 aws.s3.credentials.accessKey = ${S3_ACCESSKEY}
 aws.s3.credentials.secretKey = ${S3_SECRETKEY}
 
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
+spring.servlet.multipart.resolve-lazily=true
+
