--- a/src/main/resources/application-product.properties
+++ b/src/main/resources/application-product.properties
@@ -1,4 +1,4 @@
-spring.config.activate.on-profile=aws
+spring.config.activate.on-profile=product
 spring.datasource.url=${WEB_DB_URL}
 spring.datasource.username=${WEB_DB_USERNAME}
 spring.datasource.password=${WEB_DB_PASSWORD}
