--- a/.github/workflows/gradle.yaml
+++ b/.github/workflows/gradle.yaml
@@ -2,9 +2,9 @@ name: withUs
 
 on:
   push:
-    branches: [ develop, feature/*, main ]
+    branches: [ main ]
   pull_request:
-    branches: [ develop, feature/*, main ]
+    branches: [ main ]
 
 permissions:
   contents: read
@@ -37,3 +37,9 @@ jobs:
 
       - name: Build with Gradle
         run : ./gradlew build
+
+      - name: Build and push Docker image
+        run: |
+          sudo docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
+          sudo docker build -f Dockerfile -t ${{ secrets.DOCKERHUB_USERNAME }}/withUs .
+          sudo docker push ${{ secrets.DOCKERHUB_USERNAME }}/withUs
