docker-compose.yaml 및 workflows 작성 중 3

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,6 +19,16 @@ services:
       S3_REGION: ${{ secrets.S3_REGION }}
       S3_SECRETKEY: ${{ secrets.S3_SECRETKEY }}
       S3_STACK_AUTO: ${{ secrets.S3_STACK_AUTO }}
+      MAIL_USERNAME: ${{ MAIL_USERNAME }}
+      MAIL_PASSWORD: ${{ MAIL_PASSWORD }}
+      DB_REDIS_HOST: ${{ DB_REDIS_HOST }}
+      JWT_SECRET_KEY: ${{ JWT_SECRET_KEY }}
+      DEV_DB_URL: ${{ DEV_DB_URL }}
+      DEV_DB_USERNAME: ${{ DEV_DB_USERNAME }}
+      DEV_DB_PASSWORD: ${{ DEV_DB_PASSWORD }}
+      TEST_DB_URL: ${{ TEST_DB_URL }}
+      TEST_DB_USERNAME: ${{ TEST_DB_USERNAME }}
+      TEST_DB_PASSWORD: ${{ TEST_DB_PASSWORD }}
 
     depends_on:
       - redis
