--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,16 +19,16 @@ services:
       S3_REGION: ${{ secrets.S3_REGION }}
       S3_SECRETKEY: ${{ secrets.S3_SECRETKEY }}
       S3_STACK_AUTO: ${{ secrets.S3_STACK_AUTO }}
-      MAIL_USERNAME: ${{ MAIL_USERNAME }}
-      MAIL_PASSWORD: ${{ MAIL_PASSWORD }}
-      DB_REDIS_HOST: ${{ DB_REDIS_HOST }}
-      JWT_SECRET_KEY: ${{ JWT_SECRET_KEY }}
-      DEV_DB_URL: ${{ DEV_DB_URL }}
-      DEV_DB_USERNAME: ${{ DEV_DB_USERNAME }}
-      DEV_DB_PASSWORD: ${{ DEV_DB_PASSWORD }}
-      TEST_DB_URL: ${{ TEST_DB_URL }}
-      TEST_DB_USERNAME: ${{ TEST_DB_USERNAME }}
-      TEST_DB_PASSWORD: ${{ TEST_DB_PASSWORD }}
+      MAIL_USERNAME: ${{ secrets.MAIL_USERNAME }}
+      MAIL_PASSWORD: ${{ secrets.MAIL_PASSWORD }}
+      DB_REDIS_HOST: ${{ secrets.DB_REDIS_HOST }}
+      JWT_SECRET_KEY: ${{ secrets.JWT_SECRET_KEY }}
+      DEV_DB_URL: ${{ secrets.DEV_DB_URL }}
+      DEV_DB_USERNAME: ${{ secrets.DEV_DB_USERNAME }}
+      DEV_DB_PASSWORD: ${{ secrets.DEV_DB_PASSWORD }}
+      TEST_DB_URL: ${{ secrets.TEST_DB_URL }}
+      TEST_DB_USERNAME: ${{ secrets.TEST_DB_USERNAME }}
+      TEST_DB_PASSWORD: ${{ secrets.TEST_DB_PASSWORD }}
 
     depends_on:
       - redis
