--- a/src/main/resources/application-product.properties
+++ b/src/main/resources/application-product.properties
@@ -1,5 +1,5 @@
 spring.config.activate.on-profile=product
-spring.datasource.url=${WEB_DB_URL}
+spring.datasource.url=jdbc:mysql://withus.c92sig4iwc48.ap-northeast-2.rds.amazonaws.com:3306/WITHUS
 spring.datasource.username=${WEB_DB_USERNAME}
 spring.datasource.password=${WEB_DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
