CI/CD 구현 테스트 중 6

--- a/src/main/resources/application-product.properties
+++ b/src/main/resources/application-product.properties
@@ -1,5 +1,5 @@
 spring.config.activate.on-profile=product
-spring.datasource.url=jdbc:mysql://withus.c92sig4iwc48.ap-northeast-2.rds.amazonaws.com:3306/WITHUS
+spring.datasource.url=${WEB_DB_URL}
 spring.datasource.username=${WEB_DB_USERNAME}
 spring.datasource.password=${WEB_DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -7,3 +7,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
+
