--- a/.github/workflows/gradle.yaml
+++ b/.github/workflows/gradle.yaml
@@ -36,7 +36,7 @@ jobs:
             ${{ runner.os }}-gradle-
 
       - name: Build with Gradle
-        run : ./gradlew build
+        run : ./gradlew build -x test
 
       - name: Build and push Docker image
         run: |
