--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,4 +32,5 @@ spring.servlet.multipart.max-file-size=1MB
 spring.servlet.multipart.max-request-size=1MB
 spring.servlet.multipart.resolve-lazily=true
 
+server.http2.enabled=true
 
