--- a/build.gradle
+++ b/build.gradle
@@ -79,6 +79,9 @@ dependencies {
     // Mockito
     testImplementation 'org.mockito:mockito-core:4.8.0'
 
+    // Slack webhook
+    implementation("net.gpedro.integrations.slack:slack-webhook:1.4.0")
+
     implementation 'org.mapstruct:mapstruct:1.5.3.Final'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
 }
