--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,3 +34,6 @@ spring.servlet.multipart.resolve-lazily=true
 
 server.http2.enabled=true
 
+slack.token = ${SLACK_OAUTH_TOKEN}
+slack.channel.monitor = '${SLACK_CHANNEL}'
+slack.webhook.url = ${SLACK_CHANNEL_URL}
