--- a/build.gradle
+++ b/build.gradle
@@ -79,8 +79,9 @@ dependencies {
     // Mockito
     testImplementation 'org.mockito:mockito-core:4.8.0'
 
-    // Slack webhook
+    // Slack
     implementation("net.gpedro.integrations.slack:slack-webhook:1.4.0")
+    implementation "com.slack.api:slack-api-client:1.25.1"
 
     implementation 'org.mapstruct:mapstruct:1.5.3.Final'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
